fixed spacing

--- a/style.css
+++ b/style.css
@@ -304,6 +304,9 @@ a {
   .workflow {
     padding-bottom: 300px;
   }
+  .workflow .flex {
+    gap: 30px;
+  }
   .workflow h2 {
     width: 80%;
     margin: auto;
@@ -321,7 +324,8 @@ a {
     padding: 50px 0;
   }
   .company .flex {
-    gap: 70px;
+    margin-top: 140px;
+    gap: 80px;
   }
   .clipboard-os {
     padding: 0;
@@ -436,6 +440,9 @@ a {
   .workflow {
     padding-bottom: 300px;
   }
+  .workflow .flex {
+    gap: 30px;
+  }
   .workflow h2 {
     width: 80%;
     margin: auto;
@@ -446,11 +453,15 @@ a {
   .clipboard-os {
     margin: 100px 0;
   }
+  .clipboard-os p {
+    padding: 20px 0;
+  }
   .company {
     padding: 50px 0;
   }
   .company .flex {
-    gap: 70px;
+    margin-top: 140px;
+    gap: 80px;
   }
   .clipboard-os {
     padding: 0;
